--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: Partha Saradhi Konda - Web Developer
-description: I'm a polyglot developer. Love to reach & write the code.
+description: >-
+  I'm a polyglot developer, good at python, django, java, spring, js, nodejs,
+  angularjs, vue, docker, aws, terraform, ansible. Love to read & write the
+  code.
 baseurl: ''
 url: 'https://parthakonda.github.io'
 username: partha saradhi konda
