Updated home page

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-title: Partha Saradhi Konda - Web Developer
+title: Partha Saradhi Konda - I'm a polyglot developer, good at python, django, java, spring, js, nodejs,
+  angularjs, vue, docker, aws, terraform, ansible. Love to read & write the
+  code.
 description: >-
   I'm a polyglot developer, good at python, django, java, spring, js, nodejs,
   angularjs, vue, docker, aws, terraform, ansible. Love to read & write the
