updated disqus username

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >-
   k8s, aws, terraform, ansible and chef. Love to read & write the code
 tags: []
 email: parthasaradhi.konda@gmail.com
-disqus_username: parthakonda
+disqus_username: https-www-parthakonda-dev
 show_hero: true
 menu:
   - title: Home
