updated menu and footer

--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,18 @@ show_hero: true
 menu:
   - title: Home
     url: /
+  - title: Courses
+    url: /category/courses
+  - title: Interviewes
+    url: /category/interviews/
+  - title: Quiz
+    url: /quiz
+  - title: Apps Hub
+    url: /app/
+  - title: Contact Me
+    url: /contact
   - title: About
     url: /about
-  - title: Contact
-    url: /contact
   - title: Feed
     url: /feed.xml
 github_username: parthakonda
